<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/favorite"
            android:title="Favorite List"
            android:icon="@drawable/ic_baseline_favorite_24"
            app:showAsAction="always" />
    </group>
</menu>